# Brick

./: .eslintignore  .eslintrc.cjs  GAPLESS_PLAYBACK.md  MUSTDOv0.6.0.md  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
Brick/: package-lock.json  package.json  tauri-log.txt
Brick/src-tauri/: Cargo.toml  tauri.conf.json
Brick/src-tauri/capabilities/: default.json
Brick/src-tauri/icons/: icon.icns
Brick/src-tauri/src/: lib.rs  main.rs
scripts/: check-env.js
src/: App.tsx  index.css  main.tsx
src/components/: BrickCard.tsx  ChosenArtistCard.tsx  CloudMusicConnector.tsx  ConnectionItem.tsx  HeroCarousel.tsx  LocalMusicUploader.tsx  MusicPlayer.tsx  Navigation.tsx  Navigation_temp.tsx  NetworkStories.tsx  PillNavigation.tsx  Player.tsx  PlayerApple.tsx  PlayerV2.tsx  PlayerV3.tsx  SeismicMonitor.tsx  WallDebugPanel.tsx  WallOverlay.tsx
src/components/Settings/: Display.tsx
src/contexts/: ThemeContext.tsx  WallContext.tsx
src/data/: mockData.ts
src/hooks/: useTheWallTracker.ts  useTrackAudioMeta.ts
src/services/: MusicBrainzService.ts  SpotifyService.ts  TidalService.ts  audioController.ts  musicProvider.ts
src/styles/: globals.css  pinkTier.module.css
src/types/: index.ts
src/utils/: audioMetaHelpers.ts  audioMetadata.ts  auth.ts  cloudAuth.ts  cloudMetadata.ts  db.ts  gaplessAudio.ts  isPlaceholderAudio.ts  lastfm.ts  musicLibrary.ts  nativeAudio.ts  recentlyPlayed.ts  recentlyPlayedPlaylists.ts  repairMetadata.ts  tauriAsset.ts  theWall.ts
(+30 files in other folders)
